// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Command: move > can opt-out of move sub directory with graph 1`] = `
"info:    @rehearsal/move<test-version>
[STARTED] Analyzing project dependency graph
[SUCCESS] Analyzing project dependency graph
[STARTED] Executing git mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] renamed: 
[DATA] ./src/foo/baz.js -> ./src/foo/baz.ts
[DATA] ./src/foo/biz.js -> ./src/foo/biz.ts
[DATA] ./src/foo/e.gjs -> ./src/foo/e.gts
[DATA] ./src/foo/buz/biz.js -> ./src/foo/buz/biz.ts
[SUCCESS] Executing git mv"
`;

exports[`Command: move > can opt-out of move with graph 1`] = `
"info:    @rehearsal/move<test-version>
[STARTED] Analyzing project dependency graph
[SUCCESS] Analyzing project dependency graph
[STARTED] Executing git mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] renamed: 
[DATA] ./src/index.js -> ./src/index.ts
[DATA] ./src/foo/baz.js -> ./src/foo/baz.ts
[DATA] ./src/foo/biz.js -> ./src/foo/biz.ts
[DATA] ./src/foo/e.gjs -> ./src/foo/e.gts
[DATA] ./src/foo/buz/biz.js -> ./src/foo/buz/biz.ts
[SUCCESS] Executing git mv"
`;

exports[`Command: move > move dir and sub-dir 1`] = `
"info:    @rehearsal/move<test-version>
[STARTED] Analyzing project dependency graph
[SUCCESS] Analyzing project dependency graph
[STARTED] Executing git mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] renamed: 
[DATA] ./src/index.js -> ./src/index.ts
[DATA] ./src/foo/baz.js -> ./src/foo/baz.ts
[DATA] ./src/foo/biz.js -> ./src/foo/biz.ts
[DATA] ./src/foo/e.gjs -> ./src/foo/e.gts
[DATA] ./src/foo/buz/biz.js -> ./src/foo/buz/biz.ts
[SUCCESS] Executing git mv"
`;

exports[`Command: move > move file 1`] = `
"info:    @rehearsal/move<test-version>
[STARTED] Analyzing project dependency graph
[SUCCESS] Analyzing project dependency graph
[STARTED] Executing git mv
[DATA] git mv failed, using mv
[DATA] renamed: 
[DATA] ./src/foo/baz.js -> ./src/foo/baz.ts
[SUCCESS] Executing git mv"
`;

exports[`Command: move > move packages based on the graph 1`] = `
"info:    @rehearsal/move<test-version>
[STARTED] Analyzing project dependency graph
[SUCCESS] Analyzing project dependency graph
[STARTED] Executing git mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] renamed: 
[DATA] ./src/index.js -> ./src/index.ts
[DATA] ./src/foo/baz.js -> ./src/foo/baz.ts
[DATA] ./src/foo/biz.js -> ./src/foo/biz.ts
[DATA] ./src/foo/e.gjs -> ./src/foo/e.gts
[DATA] ./src/foo/buz/biz.js -> ./src/foo/buz/biz.ts
[DATA] ./module-a/src/baz.js -> ./module-a/src/baz.ts
[DATA] ./module-a/src/foo.js -> ./module-a/src/foo.ts
[DATA] ./module-a/src/index.js -> ./module-a/src/index.ts
[DATA] ./module-b/src/tires.js -> ./module-b/src/tires.ts
[DATA] ./module-b/src/car.js -> ./module-b/src/car.ts
[DATA] ./module-b/src/index.js -> ./module-b/src/index.ts
[SUCCESS] Executing git mv"
`;

exports[`Command: move > move sub directory based on the graph 1`] = `
"info:    @rehearsal/move<test-version>
[STARTED] Analyzing project dependency graph
[SUCCESS] Analyzing project dependency graph
[STARTED] Executing git mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] git mv failed, using mv
[DATA] renamed: 
[DATA] ./src/foo/baz.js -> ./src/foo/baz.ts
[DATA] ./src/foo/biz.js -> ./src/foo/biz.ts
[DATA] ./src/foo/e.gjs -> ./src/foo/e.gts
[DATA] ./src/foo/buz/biz.js -> ./src/foo/buz/biz.ts
[SUCCESS] Executing git mv"
`;
